# lmc-compiler

./: CMakeLists.txt  readme.md
programs/: add.lmc  add.txt  demo.txt  example.txt  out.lmc
src/: compile.c  compile.h  lexer.l  lmc_compiler.ggo  main.c  parser.y
